# practice-japanese-cli

./: .env.example  .gitignore  CLAUDE.md  MCQ.md  PLAN.md  README.md  coverage.json  japanese-cli.spec  main.py  pyproject.toml
.github/workflows/: release.yml
data/: japanese.db.backup
data/dict/: n1_kanji.txt  n1_vocab.csv  n2_kanji.txt  n2_vocab.csv  n3_kanji.txt  n3_vocab.csv  n4_kanji.txt  n4_vocab.csv  n5_kanji.txt  n5_vocab.csv
src/japanese_cli/: __init__.py  main.py
src/japanese_cli/ai/: __init__.py  agent.py  chat.py
src/japanese_cli/cli/: __init__.py  chat_command.py  flashcard.py  grammar.py  import_data.py  mcq.py  progress.py
src/japanese_cli/database/: __init__.py  connection.py  mcq_queries.py  migrations.py  queries.py  schema.py
src/japanese_cli/importers/: __init__.py  jlpt.py  jmdict.py  kanjidic.py  utils.py
src/japanese_cli/models/: __init__.py  grammar.py  kanji.py  mcq.py  progress.py  (+2 more)
tests/: conftest.py  manual_test_mcq_ui.py  test_connection.py  test_flashcard_cli.py  test_fsrs_integration.py  test_grammar_cli.py  test_grammar_ui.py  test_importers_integration.py  test_japanese_utils.py  test_jlpt.py  test_main.py  test_mcq_cli.py  test_mcq_generator.py  test_mcq_integration_workflow.py  test_mcq_models.py  test_mcq_queries.py  test_mcq_scheduler.py  test_mcq_ui.py  test_migrations.py  test_models.py  test_progress_cli.py  test_queries.py  test_review_session.py  test_schema.py  test_srs.py  test_statistics.py  test_ui_display.py  test_ui_furigana.py  test_ui_prompts.py
tests/fixtures/: sample_jmdict.xml  sample_kanjidic.xml
(+16 files in other folders)
