[project]
name = "practice-japanese-cli"
version = "0.1.0"
description = "Japanese learning CLI with FSRS spaced repetition, designed for Vietnamese learners"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fsrs>=4.0.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "wanakana-python>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
japanese-cli = "japanese_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/japanese_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
